test_regress/t/t_math_repl2_bad.out
%Error: t/t_math_repl2_bad.v:28:30: Replication value of < 0 or X/Z not legal (IEEE 1800-2023 11.4.12.1): '32'hfffffffb'
                                  : ... note: In instance 't'
   28 |          out <= {{(P24 - P29){1'b0}}, in};
      |                              ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Warning-WIDTHTRUNC: t/t_math_repl2_bad.v:28:14: Operator ASSIGNDLY expects 24 bits on the Assign RHS, but Assign RHS's REPLICATE generates 30 bits.
                                               : ... note: In instance 't'
   28 |          out <= {{(P24 - P29){1'b0}}, in};
      |              ^~
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Error: Exiting due to
